--- a/src/styles.css
+++ b/src/styles.css
@@ -288,3 +288,124 @@ footer a{
         width: 100%;
     }
 }
+
+.book-listing-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; 
+  }
+  
+  .book-listing-form {
+    width: 300px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .book-listing-form label {
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  .book-listing-form input,
+  .book-listing-form textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .book-listing-form button {
+    background-color: #4caf50;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .book-listing-form button:hover {
+    background-color: #45a049;
+  }
+  .books-in-pending-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top: 50px; 
+  }
+  
+  .books-list {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .book-item {
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin: 10px;
+    width: 300px; 
+  }
+
+  .buy-page {
+    max-width: 600px;
+    margin-top: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 70px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.checkout-form {
+    margin-top: 20px;
+}
+
+h1, h2 {
+    text-align: center;
+}
+
+.card-element {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.error-message, .success-message {
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+.error-message {
+    background-color: #ffe6e6;
+    color: #c00;
+}
+
+.success-message {
+    background-color: #e6f7e6;
+    color: #006400;
+}
+
+.pay-now-button {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.pay-now-button:disabled {
+    background-color: #ddd;
+    cursor: not-allowed;
+}
